--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "openai": "^3.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
