--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "mongoose": "^7.2.0",
     "openai": "^3.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
