--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "express": "^4.18.2",
     "mongoose": "^7.2.0",
     "openai": "^3.2.1",
     "rxjs": "~7.8.0",
