--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "noImplicitAny":false,
+    "strictNullChecks":false,
     "lib": [
       "ES2022",
       "dom"
