--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^7.2.2",
     "openai": "^3.2.1",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
